src/objects/BFM_MIRO_Header__c.object
<CustomObject>
    <fields>
        <fullName>Access_Key__c</fullName>
        <externalId>true</externalId>
        <label>Access Key</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_of_Vendor_or_Creditor__c</fullName>
        <label>Account Number of Vendor or Creditor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annullment_NF_e__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for the anullment NF-e of this MIRO operation.</description>
        <label>Annullment NF-e</label>
        <referenceTo>BFM_NF_e__c</referenceTo>
        <relationshipLabel>MIRO Header</relationshipLabel>
        <relationshipName>MIRO_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annulment_Fiscal_Doc_No__c</fullName>
        <label>Annulment Fiscal Doc No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annulment_Fiscal_Posting_Date__c</fullName>
        <label>Annulment Fiscal Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annulment_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annulment Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annulment_NF_e_reference__c</fullName>
        <label>Annulment NF-e reference</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annulment_Reason__c</fullName>
        <label>Annulment Reason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_Date_for_Due_Date_Calculation__c</fullName>
        <label>Baseline Date for Due Date Calculation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COFINS_Law__c</fullName>
        <label>COFINS Law</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_e__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CT-e</label>
        <referenceTo>BFM_CT_e__c</referenceTo>
        <relationshipName>BFM_MIRO_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Document_No__c</fullName>
        <label>Cancellation Document No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Posting_Date__c</fullName>
        <label>Cancellation Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Digit_in_Access_Key__c</fullName>
        <label>Check Digit in Access Key</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complement_SES_Flag__c</fullName>
        <label>Complement SES Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Note</label>
        <referenceTo>BFM_Debit_Note__c</referenceTo>
        <relationshipName>BFM_MIRO_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Free_Freight_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Freight Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Text_Summary__c</fullName>
        <label>Header Text Summary</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Text__c</fullName>
        <label>Header Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICMS_Law__c</fullName>
        <label>ICMS Law</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPI_Law__c</fullName>
        <label>IPI Law</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_State_Out_State__c</fullName>
        <label>In State/Out State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Document_Number_FI__c</fullName>
        <label>Invoice Document Number FI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIRO_Number__c</fullName>
        <label>MIRO Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFS</label>
        <referenceTo>BFM_NFS__c</referenceTo>
        <relationshipName>BFM_MIRO_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NF_Type__c</fullName>
        <label>NF Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Writer_Document_Number__c</fullName>
        <label>NF Writer Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Writer_Posting_Date__c</fullName>
        <label>NF Writer Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NF_e_DF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NF-e DF</label>
        <referenceTo>BFM_NF_e_DF__c</referenceTo>
        <relationshipName>BFM_MIRO_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NF_e_Issuing_Type__c</fullName>
        <label>NF-e Issuing Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_Random_Number__c</fullName>
        <label>NF-e: Random Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Due_Date__c</fullName>
        <label>Net Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Complement_Ocurrence__c</fullName>
        <label>Number of Complement Ocurrence</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Complement_SES__c</fullName>
        <label>Number of Complement SES</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_CT_e_NF_Writer_Document_Number__c</fullName>
        <label>Original CT-e NF Writer Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIS_Law__c</fullName>
        <label>PIS Law</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Block__c</fullName>
        <label>Payment Block</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Document__c</fullName>
        <label>Payment Document</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Date_in_the_Document__c</fullName>
        <label>Posting Date in the Document</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Protocol_Number__c</fullName>
        <label>Protocol Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Document_Category__c</fullName>
        <label>Reference Document Category</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Document_Number__c</fullName>
        <label>Tax Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Net__c</fullName>
        <label>Value Net</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W_tax_Apply_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W/tax Apply Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_tax_base_amount_in_LC2__c</fullName>
        <label>W/tax base amount in LC2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W_tax_base_amount_in_LC__c</fullName>
        <label>W/tax base amount in LC</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Code__c</fullName>
        <label>Withholding Tax Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withholding_tax_type__c</fullName>
        <label>Withholding tax type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>MIRO Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MIRO-{000000}</displayFormat>
        <label>MIRO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIRO Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>